# Framework-X

./: .gitignore  .gitmodules
Framework X/: CMakeLists.txt  LHSConfiguration.hpp  Lexer.cpp  Lexer.hpp  README.md  RHSTemplate.cpp  RHSTemplate.hpp  SourceReader.cpp  SourceReader.hpp  TemplatePart.hpp  X.cpp  X.hpp  XInstance.hpp  build.sh  config.json  configSchema.json  main.cpp  setup.sh  templ.tmpl  test.cpp  test.transformed.cpp  test2.cpp  test2.transformed.cpp
Framework X.xcodeproj/: project.pbxproj
Framework X.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Framework X.xcodeproj/project.xcworkspace/xcshareddata/: Framework X.xcscmblueprint
Framework X.xcodeproj/project.xcworkspace/xcuserdata/ruben.xcuserdatad/: UserInterfaceState.xcuserstate
Framework X.xcodeproj/xcuserdata/ruben.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Framework X.xcodeproj/xcuserdata/ruben.xcuserdatad/xcschemes/: Framework X.xcscheme  xcschememanagement.plist
Framework X/LHS/: ASTTraversalState.cpp  ASTTraversalState.hpp  LHSComparators.cpp  LHSComparators.hpp  LHSConfiguration.cpp  LHSConfiguration.hpp  LHSTemplate.cpp  LHSTemplate.hpp  LHSTemplateParser.cpp  LHSTemplateParser.hpp  configSchema.json
Framework X/RHS/: Lexer.cpp  Lexer.hpp  RHSTemplate.cpp  RHSTemplate.hpp  RHSTemplatePart.hpp  SourceReader.cpp  SourceReader.hpp
Framework X/common/: Lexer.cpp  Lexer.hpp  X.cpp  X.hpp  XInstance.cpp
Framework X/examples/boolean-comparison/: Example.cpp  config.json  templ.tmpl
Framework X/examples/pointer-to-reference/: LargeData.cpp  config.json  templ.tmpl
Framework X/examples/rearrange-class-members/: AB.cpp  MyClass.cpp  config.json  templ.tmpl
Framework X/examples/redundant-void-params/: Example.cpp  config.json  templ.tmpl
Framework X/examples/replace-namespace/namespace-decl/: config.json  templ.tmpl
Framework X/examples/replace-namespace/using/: config.json  templ.tmpl
